--- a/Sample.html
+++ b/Sample.html
@@ -39,7 +39,7 @@
                     <div class="question">
                         <label for="source_username" class="inputlabel">Username</label>
                         <div class="inputform">
-                            <input type="text" class="boxform" id="source_username" value="E8_WS_USER" required="required">
+                            <input type="text" class="boxform" id="source_username" value="" required="required">
                         </div>
                     </div>
 
@@ -52,7 +52,7 @@
                     <div class="question">
                         <label for="source_url" class="inputlabel">URL</label>
                         <div class="inputform">
-                            <input type="url" class="boxform url" id="source_url" value="https://dtr.t1cloud.com/T1Default/CiAnywhere/Web/DTR/Api/T1/WS/v1/ChartAccountGL/ListComponents" required="required">
+                            <input type="url" class="boxform url" id="source_url" value="" required="required">
                         </div>
                     </div>
                     <br />
